# clipboard-manager

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: rust.yml
src/: main.rs
src/clipboard/: backend.rs
src/history/: manager.rs
src/models/: entry.rs
src/monitor/: hyprland.rs  mod.rs  process.rs  signal.rs  wayland.rs
src/ui/: app.rs  display.rs  emoji.rs  mod.rs
src/utils/: constants.rs  helpers.rs
